# htmlcss

./: .dockerignore  CLOUDRUN_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  README.md  config.env.example  deploy.sh  deploy_cloudrun.sh  main.py  main_production.py  pyproject.toml  requirements.txt  start.sh  strategymovingaverage.py  test_api_logging.py  test_app.py  test_bot_start.py  test_docker.sh  test_pnl_calculation.py
backend/: app.py
backend/templates/: index.html  index.html.scifi.backup
news_service/: crypto_news_trader.py
