[project]
name = "4fullstacktradeapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "delta-rest-client>=1.0.13",
    "dotenv>=0.9.9",
    "eventlet>=0.40.3",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "requests>=2.32.5",
]
